afronden responsive design hoofdpagina

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             </section>
 
             <section id="filter-results">
-                <ul id="restaurants-list"></ul>
+                <div id="restaurants-list"></div>
+                <!--<ul id="restaurants-list"></ul>-->
             </section>
         </main>
 
