--- a/restaurant.html
+++ b/restaurant.html
@@ -21,9 +21,12 @@
                 <h1><a href="/">Restaurant Reviews</a></h1>
             </nav>
             <!-- Beginning breadcrumb -->
-            <ul id="breadcrumb">
-                <li><a href="/">Home</a></li>
-            </ul>
+            <div id="breadcrumb">
+                <a href="/" tabindex="0">Home</a>
+            </div>
+            <!--<ul id="breadcrumb">-->
+                <!--<li><a href="/" tabindex="0">Home</a></li>-->
+            <!--</ul>-->
             <!-- End breadcrumb -->
             <!-- End nav -->
         </header>
