afronden opzet code

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div id="restaurants-list"></div>
             </section>
 
-            <section id="map-container">
+            <section id="map-container" class="medium">
                 <div id="map"></div>
             </section>
         </main>
