--- a/restaurant.html
+++ b/restaurant.html
@@ -22,7 +22,7 @@
             </nav>
             <!-- Beginning breadcrumb -->
             <div id="breadcrumb">
-                <a href="/" tabindex="0">Home</a>
+                <a href="/">Home</a>
             </div>
             <!--<ul id="breadcrumb">-->
                 <!--<li><a href="/" tabindex="0">Home</a></li>-->
