--- a/restaurant.html
+++ b/restaurant.html
@@ -21,7 +21,7 @@
                 <h1><a href="/">Restaurant Reviews</a></h1>
             </nav>
             <!-- Beginning breadcrumb -->
-            <div id="breadcrumb">
+            <div id="breadcrumb" role="navigation" aria-label="breadcrumb">
                 <a href="/">Home</a>
             </div>
             <!--<ul id="breadcrumb">-->
@@ -36,7 +36,7 @@
         <main id="maincontent">
             <!-- Beginning restaurant -->
             <section id="restaurant-container">
-                <h1 id="restaurant-name"></h1>
+                <h2 id="restaurant-name"></h2>
                 <img id="restaurant-img">
                 <p id="restaurant-cuisine"></p>
                 <p id="restaurant-address"></p>
@@ -50,7 +50,7 @@
             <!-- End reviews -->
 
             <!-- Beginning map -->
-            <section id="map-container" class="large">
+            <section id="map-container" class="large" role="application" aria-roledescription="location">
                 <div id="map"></div>
             </section>
             <!-- End map -->
